--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React Project by: Showkat Sumon</title>
+    <title>eShop by: Showkat Sumon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="loader"></div>
     <div id="root"></div>
    
   </body>
